deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo_app_deployment
  labels:
    app: demo_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo_app
  template:
    metadata:
      labels:
        app: demo_app
    spec:
      nodeSelector:
        type: backend
      containers:
        - name: demo_app
          image: darshitsri/demo_app:latest
          ports:
            - containerPort: 8080
