k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-app
  name: python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: my-python-app
        image: darshitsri/python-app
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-app
    k8s-app: python-app
  name: python-app
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  type: LoadBalancer
  selector:
    app: python-app
