service.yaml
kind: Service
apiVersion: v1
metadata:
   name: javaservice
   label:
      app: javaapp
spec:
  selector:
     app: javaapp
  type: NodePort
  ports:
  - Nodeport: 30036
    port: 80
    targetPort: 8080
